--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,23 +1,22 @@
-
-openhasp:
+:
   plate02:
     objects:
       
-      # page0 datetime
+      # All Pages: Datetime
       - obj: "p0b1"
         properties:
           "text": '{{ as_timestamp(now())|timestamp_custom("%Y/%m/%d %I:%M %p") }}'
 
-      # page1 temperature card
-      - obj: "p1b4"
+
+
+      # Page 1: Temp/Humidity Cards
+      - obj: "p1b4" # Temperature card
         properties:
           "text": '{{ states("sensor.usbsensor_05_dht11_temperature") }}°C'
-      # page1 humidity card
-      - obj: "p1b7"
+      - obj: "p1b7" # Humidity card
         properties:
           "text": '{{ states("sensor.usbsensor_05_dht11_humidity") }}%'
-
-      # page1 ceiling lamp
+      # Ceiling Lamp
       - obj: "p1b11" # button
         event:
           "down":
@@ -32,8 +31,7 @@ openhasp:
       - obj: "p1b12" # icon background
         properties:
           "bg_color": '{{ "#493416" if is_state("light.ceiling_light_group", "on") else "#2C2C2C" }}'
-
-      # page1 A/C Fan
+      # A/C Fan
       - obj: "p1b21" # button
         event:
           "down":
@@ -48,7 +46,6 @@ openhasp:
       - obj: "p1b22" # icon background
         properties:
           "bg_color": '{{ "#253926" if is_state("switch.s31_03", "on") else "#2C2C2C" }}'
-
       # Window Fan
       - obj: "p1b31" # button
         event:
@@ -65,7 +62,9 @@ openhasp:
         properties:
           "bg_color": '{{ "#253926" if is_state("switch.s31_02", "on") else "#2C2C2C" }}'
 
-      # Bedside Lamp
+
+
+      # Page2: Bedside Lamp
       - obj: "p2b11" # button
         event:
           "down":
@@ -94,7 +93,6 @@ openhasp:
               data:
                 entity_id: light.tasmota_3
                 brightness:  "{{ val }}"
-
       # Neopixel
       - obj: "p2b21" # button
         event:
@@ -124,7 +122,6 @@ openhasp:
               data:
                 entity_id: light.wled_master
                 brightness:  "{{ val }}"
-
       # Samsung TV
       - obj: "p2b31" # button
         event:
@@ -143,8 +140,86 @@ openhasp:
 
 
 
-      # Settings
-      - obj: "p4b4" # slider
+      # Page3: Chips
+      - obj: "p3b3" # energy
+        properties:
+          "text": '{{ states("sensor.bedroom_power_utilization") }} w'
+      - obj: "p3b5" # lights icon
+        properties:
+          "text_color": "{{ '#e88c03' if (expand('light.bedroom_lights') | selectattr('state','eq','on') | list | count() > 0) else '#e1e1e1' }}"
+      - obj: "p3b6" # lights count
+        properties:
+          "text": "{{ expand('light.bedroom_lights') | selectattr('state','eq','on') | list | count() }} on"
+      - obj: "p3b8" # fans icon
+        properties:
+          "text_color": "{{ '#2196f3' if (expand('switch.bedroom_fans') | selectattr('state','eq','on') | list | count() > 0) else '#e1e1e1' }}"
+      - obj: "p3b9" # fans count
+        properties:
+          "text": "{{ expand('switch.bedroom_fans') | selectattr('state','eq','on') | list | count() }} on"
+
+      # Page3: Timer
+      - obj: "p3b22" # hr
+        properties:
+          "text": '{{ states("input_number.plate02_timer_hour") | round() }}'
+      - obj: "p3b24" # min
+        properties:
+          "text": '{{ states("input_number.plate02_timer_minute") | round()  }}'
+      - obj: "p3b18" # hr up
+        event:
+          "down":
+            - service: input_number.set_value
+              data:
+                entity_id: input_number.plate02_timer_hour
+                value: '{{ states("input_number.plate02_timer_hour") | int + 1 }}'
+      - obj: "p3b20" # hr down
+        event:
+          "down":
+            - service: input_number.set_value
+              data:
+                entity_id: input_number.plate02_timer_hour
+                value: '{{ states("input_number.plate02_timer_hour") | int - 1 }}'
+      - obj: "p3b19" # min up
+        event:
+          "down":
+            - service: input_number.set_value
+              data:
+                entity_id: input_number.plate02_timer_minute
+                value: '{{ states("input_number.plate02_timer_minute") | int + 15 }}'
+      - obj: "p3b21" # min down
+        event:
+          "down":
+            - service: input_number.set_value
+              data:
+                entity_id: input_number.plate02_timer_minute
+                value: '{{ states("input_number.plate02_timer_minute") | int - 15 }}'
+      - obj: "p3b16" # dropdown
+        properties:
+          "options": >
+            {% if (state_attr('input_select.plate02_timer_dropdown','options') != none and states('input_select.plate02_timer_dropdown') not in ['unavailable', 'unknown']) %}{%for item in state_attr('input_select.plate02_timer_dropdown','options')%}{{item+"\n"|e}}{%-if not loop.last%}{%-endif%}{%-endfor%}{% endif %}
+          "val": >
+            {% if (state_attr('input_select.plate02_timer_dropdown','options') != none and states('input_select.plate02_timer_dropdown') not in ['unavailable', 'unknown']) %}{%for item in state_attr('input_select.plate02_timer_dropdown','options')%}
+            {{loop.index -1 if item == states('input_select.plate02_timer_dropdown') }}
+            {%-endfor%}{% endif %}
+        event:
+          "changed":
+            - service: input_select.select_option
+              data:
+                option: '{{ text }}'
+              target:
+                entity_id: input_select.plate02_timer_dropdown
+      - obj: "p3b25" # START TIMER
+        event:
+          "down":
+            - service: script.plate02_settimer
+              data:
+                minutes: '{{ states("input_number.plate02_timer_minute") | int }}'
+                hours: '{{ states("input_number.plate02_timer_hour") | int }}'
+                entity: '{{ states("input_select.plate02_timer_dropdown") }}'
+
+
+
+      # Page4: Settings
+      - obj: "p4b4" # brightness slider
         properties:
           "val": "{{ state_attr('light.plate02_backlight', 'brightness') if state_attr('light.plate02_backlight', 'brightness') != None else 0 }}"
         event:
@@ -158,15 +233,25 @@ openhasp:
               data:
                 entity_id: light.plate02_backlight
                 brightness:  "{{ val }}"
-
       - obj: "p4b10" # uptime
         properties:
-          "text": '{{ (state_attr("openhasp.plate02", "uptime") / 60) | round() }} minutes'
-
+          # two options here, the more complicated one being enabled
+          #"text": '{{ (state_attr("openhasp.plate02", "uptime") / 60) | round() }} minutes'
+          "text": >
+            {% set seconds = state_attr("openhasp.plate02", "uptime") %}
+            {%- set map = {'Week': (seconds / 604800) % 604800,
+               'Day': (seconds / 86400) % 7,
+               'Hour': (seconds / 3600) % 24,
+               'Minute': (seconds / 60) % 60,
+               'Second': (seconds % 60) } -%}
+            {%- for item in map if map[item] | int > 0 -%}
+              {%- if loop.first %}{% elif loop.last %}, and {% else %}, {% endif -%}
+              {{- map[item]|int }} {{ item -}} {{- 's' if map[item]|int > 1 -}}
+              {% set index = index + 1%}
+            {%- endfor -%}
       - obj: "p4b12" # version
         properties:
           "text": '{{ state_attr("openhasp.plate02", "version") }}'
-
       - obj: "p4b14" # friendly name
         properties:
           "text": '{{ state_attr("openhasp.plate02", "friendly_name") }}'
